syntax="proto3";

package cmd_resp;

option go_package = "./protos";

import "protos/process.proto";

import "protos/group.proto";

message CmdResp {
      string id  = 1;
      string name = 2;
      string value_str  = 3;
      process.Process process = 4;
      process.ProcessList process_list = 5;
      pgroup.Group group = 6;
      pgroup.GroupList group_list = 7;
      string error = 8;
}
